trying to fix horizontal scroll bar

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 :root {
   --font-base: 'Cormorant Upright', serif;
   --font-alt: 'Open Sans', sans-serif;
-  
+
   --color-golden: #DCCA87;
   --color-black: #0C0C0C;
   --color-gray: #545454;
@@ -17,7 +17,9 @@
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
+  outline: 1px solid red;
 }
+
 
 a {
   color: unset;
